[B]v1.1.5[/B]
- Fix script error when trying to play episodes from series.
- Temp remove of "openload" sources (changes inside "openload" side).
[B]v1.1.4[/B]
- Added support playing from: openload, divxpress and vidlockers.
- Added categories in Series and Movies: Most Viewed, Recent, Top Rated and Most Commented.
[B]v1.1.3[/B]
- Fix error on autoplay.
[B]v1.1.2[/B]
- Fix for search
- Added "Live Shows" category.
[B]v1.1.1[/B]
- Fix according to site changes.
[B]v1.1.0[/B]
- Added support for playing trailers of series too.
[B]v1.0.9[/B]
- Added support for playing trailers.
[B]v1.0.8[/B]
- Added option to filter search by Year.
- Fixed problem with duplicates in "Movies" and "Series" categories.
- Fixed problem that showing only first page in search result.
[B]v1.0.7[/B]
- Added missing video-quallities to playing list.
[B]v1.0.6[/B]
- Added support for "allmyvideos" links.
- Sort list of sources by video quality.
- Auto play will try to play the best avaliable quality of videos.
- Fix auto-play bug when there is "yify" in sources list.
[B]v1.0.5[/B]
- Added quality label to item's name.
- Added support for "yify" links.
[B]v1.0.4[/B]
- All playing options in one list. (autoPlay option removed from addon settings.)
[B]v1.0.3[/B]
- Default domain change to http://www.movix.me
- You can choose filter search to "All", "Movies" or "Series". 
- Added "Movies" and "Series" categories.
- Fix for "moovreel" and "filehoot" links
[B]v1.0.2[/B]
- Fix for watching series at auto play mode.
[B]v1.0.1[/B]
- Added missing categories.
- Auto play mode by default (can change at addon settings).
[B]v1.0.0[/B]
- Initial release