@@ -1,3 +1,5 @@
+[B]v1.1.6[/B]
+- Check if link is "adf.ly" before resolve.
 [B]v1.1.5[/B]
 - Fix script error when trying to play episodes from series.
 - Temp remove of "openload" sources (changes inside "openload" side).
